--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,41 @@ p {
     background-color: var(--primary-color-pink);
     letter-spacing: 2px;
     color: var(--font-button-color);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.main button .spinner {
+    border: 4px solid rgba(255, 255, 255, 1);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border-left-color: var(--p-font-color);
+
+    animation: spin 1s ease infinite;
+    margin: 0 auto;
+    /* display: none; */
+    position: absolute;
+    /* right: 60px; */
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.main .hide {
+    /* display: none; */
+    visibility: hidden;
+
 }
 
 .main .hero .hero-wrapper article {
